--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <div class="hero">
             <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
             <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
+            <img src="images/banner.jpg" alt="Banner Image" class="banner-image">
         </div>
     </header>
 
     <section id="about" class="section fade-in">
         <h2>About Me</h2>
-        <p>I’m Olamilekan Muraina, a seasoned eCommerce expert with over 7 years of experience, generating over $14 million in revenue. Specializing in Shopify, dropshipping, and digital marketing, I help brands scale efficiently.</p>
+        <p>Iâ€™m Olamilekan Muraina, a seasoned eCommerce expert with over 7 years of experience, generating over $14 million in revenue. Specializing in Shopify, dropshipping, and digital marketing, I help brands scale efficiently.</p>
     </section>
 
     <section id="services" class="section fade-in">
