--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="hero">
             <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
             <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
-            <img src="images/banner.jpg" alt="Banner Image" class="banner-image">
+            <img src="banner.jpg" alt="Banner Image" class="banner-image">
         </div>
     </header>
 
