--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
             </ul>
         </nav>
         <div class="hero">
-            <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
-            <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
+            <img src="banner-image.jpg" alt="Banner Image" class="banner-image">
+            <div class="hero-content">
+                <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
+                <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
+            </div>
         </div>
     </header>
 
     <section id="about" class="section fade-in">
         <h2>About Me</h2>
-        <p>I’m Olamilekan Muraina, a seasoned eCommerce expert with over 7 years of experience, generating over $14 million in revenue. Specializing in Shopify, dropshipping, and digital marketing, I help brands scale efficiently.</p>
+        <p>Iâ€™m Olamilekan Muraina, a seasoned eCommerce expert with over 7 years of experience, generating over $14 million in revenue. Specializing in Shopify, dropshipping, and digital marketing, I help brands scale efficiently.</p>
     </section>
 
     <section id="services" class="section fade-in">
