--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <img src="https://github.com/Freelankarx/Freelankarx/blob/main/banner.jpg" class="banner-image">
+            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/banner.jpg" class="banner-image">
             <div class="hero-content">
                 <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
                 <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
