--- a/index.html
+++ b/index.html
@@ -27,8 +27,60 @@
         <div class="hero-content">
             <h2 class="fade-in">Empowering Brands with eCommerce & Digital Marketing</h2>
             <p class="fade-in">Helping businesses scale with Shopify, Dropshipping, and High-Converting Marketing Strategies.</p>
+            <a href="#contact" class="button">Get in Touch</a>
         </div>
     </header>
+
+    <!-- About Section -->
+    <section id="about" class="section reveal">
+        <h2>About Me</h2>
+        <p>I am Olamilekan Muraina, a professional in Shopify, TikTok Shop, and eCommerce marketing, helping brands grow and maximize profits.</p>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="section reveal">
+        <h2>Services</h2>
+        <div class="services-container">
+            <div class="service-card">
+                <h3>Shopify Store Setup</h3>
+                <p>Custom Shopify stores designed for conversions.</p>
+            </div>
+            <div class="service-card">
+                <h3>Email Marketing</h3>
+                <p>Boost sales with automated email sequences.</p>
+            </div>
+            <div class="service-card">
+                <h3>Social Media Ads</h3>
+                <p>Run high-converting TikTok and Meta ads.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="section reveal">
+        <h2>What Clients Say</h2>
+        <div class="testimonial-slider">
+            <div class="testimonial">
+                <p>"Olamilekan helped scale my store to $50K in revenue!"</p>
+                <h4>- John Doe</h4>
+            </div>
+            <div class="testimonial">
+                <p>"His TikTok marketing strategies are game-changing!"</p>
+                <h4>- Jane Smith</h4>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section reveal">
+        <h2>Contact Me</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit" class="button">Send Message</button>
+        </form>
+    </section>
 
     <script src="script.js"></script>
 </body>
