--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <div class="hero-overlay"></div>
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/banner.jpg" alt="Hero Banner" class="hero-image">
         <div class="hero-content">
             <h2>Transforming Ideas into Reality</h2>
             <p>Creative solutions for businesses & brands worldwide.</p>
