--- a/index.html
+++ b/index.html
@@ -75,7 +75,17 @@
     <!-- Contact Section -->
     <section id="contact" class="section reveal">
         <h2>Contact Me</h2>
-        <p>Let's collaborate! Get in touch with me.</p>
+        <p>Let's work together! Reach out via <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <div class="social-icons">
+            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-upwork"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-kwork"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-fiverr"></i></a>
+        </div>
     </section>
 
     <script src="script.js"></script>
