--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olamilekan Samuel - Ultimate Portfolio</title>
+    <title>Olamilekan Muraina- Ultimate Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <nav>
-            <div class="logo">Olamilekan Samuel</div>
+            <div class="logo">Olamilekan Muraina</div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
