--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             </ul>
         </nav>
         <section class="hero">
+            <div class="hero-overlay"></div>
+            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/banner.jpg" class="hero-image"
             <div class="hero-content">
                 <h1>Your Digital Growth Partner</h1>
                 <p>Expert in Shopify Dropshipping, E-commerce, and Digital Marketing</p>
