--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </nav>
         <section class="hero">
             <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/banner.jpg" class="hero-image"
-            <div class="hero-content">
+            <div class="hero-conten>
+                <div class="hero-overlay"></div>
                 <h1>Your Digital Growth Partner</h1>
                 <p>Expert in Shopify Dropshipping, E-commerce, and Digital Marketing</p>
                 <a href="#contact" class="btn">Get in Touch</a>
