--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <section class="hero">
+        <section class="banner">
+            <div class="banner-overlay"></div>
             <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/banner.jpg" class="hero-image"
-            <div class="hero-conten>
-                <div class="overlay-content"></div>
+            <div class="banner-content>
                 <h1>Your Digital Growth Partner</h1>
                 <p>Expert in Shopify Dropshipping, E-commerce, and Digital Marketing</p>
                 <a href="#contact" class="btn">Get in Touch</a>
