--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="https://via.placeholder.com/400x300?text=About+Me" alt="About Me">
+        <img src="https://github.com/Freelankarx/Freelankarx/blob/761edd0758c572eebefef4f3d9ba69ea44681b95/20250211_190328_0000.png" alt="About Me">
         <div class="text">
           <p>I am a seasoned expert with over 7 years of experience generating $14M+ in revenue. I specialize in Shopify, eCommerce, and Digital Marketing, helping brands scale effectively and efficiently.</p>
         </div>
