--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Olamilekan Samuel - Ultimate Portfolio</title>
+  <title>Olamilekan Muraina - Ultimate Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Font Awesome for social media icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
   <!-- Header Section with Video Banner -->
   <header>
     <nav>
-      <div class="logo">Olamilekan Samuel</div>
+      <div class="logo">FREELANKARX</div>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -41,7 +41,7 @@
   <main>
     <!-- About Section -->
     <section id="about" class="section">
-      <h2>About Me</h2>
+      <h2>OLAMILEKAN</h2>
       <div class="about-content">
         <img src="https://github.com/Freelankarx/Freelankarx/blob/761edd0758c572eebefef4f3d9ba69ea44681b95/20250211_190328_0000.png" alt="About Me">
         <div class="text">
