--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Olamilekan Muraina - Ultimate Portfolio</title>
+  <title>freelankarx - Olamilekan Muraina</title>
+  <!-- Favicon using your about me image -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for social media icons -->
+  <!-- Font Awesome for social icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Header Section with Video Banner -->
   <header>
     <nav>
-      <div class="logo">FREELANKARX</div>
+      <div class="logo">freelankarx</div>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -22,14 +24,14 @@
       </ul>
     </nav>
     <section class="hero">
-      <!-- Video Banner (using the raw GitHub URL) -->
+      <!-- Video Banner using raw GitHub URL -->
       <video autoplay loop muted playsinline class="hero-video">
         <source src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7b808773e9f3aad67c21e7bb5084ce8267d5a7d5/1000067383-vmake.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <!-- Tinted Overlay for readability -->
       <div class="overlay"></div>
-      <!-- Hero Content -->
+      <!-- Hero Content (Text Over Video) -->
       <div class="hero-content">
         <h1>Your Digital Growth Partner</h1>
         <p>Expert in Shopify, eCommerce, and Digital Marketing</p>
@@ -43,9 +45,11 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="https://github.com/Freelankarx/Freelankarx/blob/761edd0758c572eebefef4f3d9ba69ea44681b95/20250211_190328_0000.png" alt="Olamilekan">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" alt="Olamilekan Muraina">
         <div class="text">
-          <p>I am a seasoned expert with over 7 years of experience generating $14M+ in revenue. I specialize in Shopify, eCommerce, and Digital Marketing, helping brands scale effectively and efficiently.</p>
+          <p>
+            I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer. With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale effectively and reach new heights.
+          </p>
         </div>
       </div>
     </section>
@@ -57,7 +61,7 @@
         <div class="service">
           <i class="fas fa-store"></i>
           <h3>Shopify Store Setup</h3>
-          <p>Build high-converting, custom Shopify stores tailored for your brand.</p>
+          <p>Build high-converting, custom Shopify stores tailored to your brand.</p>
         </div>
         <div class="service">
           <i class="fas fa-ad"></i>
@@ -77,23 +81,38 @@
       <h2>My Work</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="https://via.placeholder.com/400x300?text=Project+1" alt="Project 1">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%201%20image" alt="Project 1">
         </div>
         <div class="portfolio-item">
-          <img src="https://via.placeholder.com/400x300?text=Project+2" alt="Project 2">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%202%20image" alt="Project 2">
         </div>
         <div class="portfolio-item">
-          <img src="https://via.placeholder.com/400x300?text=Project+3" alt="Project 3">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%203%20image" alt="Project 3">
         </div>
       </div>
     </section>
 
-    <!-- Testimonials Section -->
+    <!-- Testimonials Section with Professional Review Input and Star Ratings -->
     <section id="testimonials" class="section">
       <h2>Testimonials</h2>
       <div class="testimonial-card">
-        <p>“Olamilekan helped my business reach new heights with his expert Shopify strategies!”</p>
+        <p>“freelankarx transformed our Shopify store and our revenue skyrocketed. Truly exceptional service!”</p>
+        <div class="stars">
+          <i class="fas fa-star"></i> 
+          <i class="fas fa-star"></i> 
+          <i class="fas fa-star"></i> 
+          <i class="fas fa-star"></i> 
+          <i class="fas fa-star-half-alt"></i>
+        </div>
         <h4>- Satisfied Client</h4>
+      </div>
+      <div class="testimonial-input">
+        <h3>Leave Your Review</h3>
+        <form id="testimonial-form">
+          <input type="text" placeholder="Your Name" required>
+          <textarea placeholder="Your Testimonial" required></textarea>
+          <button type="submit" class="btn">Submit Review</button>
+        </form>
       </div>
     </section>
 
@@ -101,22 +120,22 @@
     <section id="contact" class="section">
       <h2>Contact Me</h2>
       <p>Let's work together! Reach out via email or connect with me on social media.</p>
-      <a href="mailto:contact@example.com" class="btn">Email Me</a>
+      <a href="mailto:freelankarx@outlook.com" class="btn">Email Me</a>
       <div class="social-icons">
-        <a href="#" class="social-link"><i class="fab fa-fiverr"></i></a>
-        <a href="#" class="social-link"><i class="fas fa-briefcase"></i></a> <!-- Representing Kwork --> 
-        <a href="#" class="social-link"><i class="fab fa-upwork"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.tiktok.com/@freelankarx?_t=ZM-8tqrgG6YWPe&_r=1" class="social-link"><i class="fab fa-tiktok"></i></a>
+        <a href="https://kwork.com/user/freelankarx" class="social-link"><i class="fas fa-briefcase"></i></a> <!-- Using briefcase icon for Kwork --> 
+        <a href="http://fiverr.com/lekieboyolamile/" class="social-link"><i class="fab fa-fiverr"></i></a>
+        <a href="https://www.upwork.com/freelancers/~019863175ee75bae5a" class="social-link"><i class="fas fa-user-tie"></i></a>
+        <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/freelankarx" class="social-link"><i class="fab fa-facebook"></i></a>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Olamilekan Samuel. All rights reserved.</p>
+    <p>&copy; 2024 freelankarx. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
