--- a/index.html
+++ b/index.html
@@ -116,28 +116,35 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-      <h2>Contact Me</h2>
-      <p>Let's work together! Reach out via email or connect with me on social media.</p>
-      <a href="mailto:freelankarx@outlook.com" class="btn">Email Me</a>
-      <div class="social-icons">
-        <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://www.tiktok.com/@freelankarx?_t=ZM-8tqrgG6YWPe&_r=1" class="social-link"><i class="fab fa-tiktok"></i></a>
-        <a href="https://kwork.com/user/freelankarx" class="social-link"><i class="fas fa-briefcase"></i></a> <!-- Using briefcase icon for Kwork --> 
-        <a href="http://fiverr.com/lekieboyolamile/" class="social-link"><i class="fab fa-fiverr"></i></a>
-        <a href="https://www.upwork.com/freelancers/~019863175ee75bae5a" class="social-link"><i class="fas fa-user-tie"></i></a>
-        <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/freelankarx" class="social-link"><i class="fab fa-facebook"></i></a>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 freelankarx. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
+   <!-- Contact Section -->
+<section id="contact" class="section">
+  <h2>Contact Me</h2>
+  <p>Let's work together! Reach out via email or connect with me on social media.</p>
+  <a href="mailto:freelankarx@outlook.com" class="btn">Email Me</a>
+  <div class="social-icons">
+    <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/whatsapp%20icom.png" alt="WhatsApp">
+    </a>
+    <a href="https://www.tiktok.com/@freelankarx?_t=ZM-8tqrgG6YWPe&_r=1" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/tiktok.png" alt="TikTok">
+    </a>
+    <a href="https://kwork.com/user/freelankarx" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/kwork.png" alt="Kwork">
+    </a>
+    <a href="http://fiverr.com/lekieboyolamile/" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/Fiverr-Logo.png" alt="Fiverr">
+    </a>
+    <a href="https://www.upwork.com/freelancers/~019863175ee75bae5a" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/upwork.png" alt="Upwork">
+    </a>
+    <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/linkedin.png" alt="LinkedIn">
+    </a>
+    <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.facebook.com/freelankarx" class="social-link" target="_blank">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/facebook-icon-lg.png" alt="Facebook">
+    </a>
+  </div>
+</section>
