--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freelankarx - Olamilekan Muraina</title>
-  <!-- Favicon using your about me image -->
+  <!-- Favicon using your About Me image -->
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for social icons -->
+  <!-- Font Awesome for any extra icons (if needed) -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -24,14 +24,14 @@
       </ul>
     </nav>
     <section class="hero">
-      <!-- Video Banner using raw GitHub URL -->
+      <!-- Video Banner (raw URL) -->
       <video autoplay loop muted playsinline class="hero-video">
         <source src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7b808773e9f3aad67c21e7bb5084ce8267d5a7d5/1000067383-vmake.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
-      <!-- Tinted Overlay for readability -->
+      <!-- Tinted Overlay -->
       <div class="overlay"></div>
-      <!-- Hero Content (Text Over Video) -->
+      <!-- Hero Content -->
       <div class="hero-content">
         <h1>Your Digital Growth Partner</h1>
         <p>Expert in Shopify, eCommerce, and Digital Marketing</p>
@@ -48,7 +48,9 @@
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" alt="Olamilekan Muraina">
         <div class="text">
           <p>
-            I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer. With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale effectively and reach new heights.
+            I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer.
+            With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale
+            effectively and reach new heights.
           </p>
         </div>
       </div>
@@ -92,7 +94,7 @@
       </div>
     </section>
 
-    <!-- Testimonials Section with Professional Review Input and Star Ratings -->
+    <!-- Testimonials Section -->
     <section id="testimonials" class="section">
       <h2>Testimonials</h2>
       <div class="testimonial-card">
@@ -116,35 +118,44 @@
       </div>
     </section>
 
-   <!-- Contact Section -->
-<section id="contact" class="section">
-  <h2>Contact Me</h2>
-  <p>Let's work together! Reach out via email or connect with me on social media.</p>
-  <a href="mailto:freelankarx@outlook.com" class="btn">Email Me</a>
-  <div class="social-icons">
-    <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/whatsapp%20icom.png" alt="WhatsApp">
-    </a>
-    <a href="https://www.tiktok.com/@freelankarx?_t=ZM-8tqrgG6YWPe&_r=1" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/tiktok.png" alt="TikTok">
-    </a>
-    <a href="https://kwork.com/user/freelankarx" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/kwork.png" alt="Kwork">
-    </a>
-    <a href="http://fiverr.com/lekieboyolamile/" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/Fiverr-Logo.png" alt="Fiverr">
-    </a>
-    <a href="https://www.upwork.com/freelancers/~019863175ee75bae5a" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/upwork.png" alt="Upwork">
-    </a>
-    <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/linkedin.png" alt="LinkedIn">
-    </a>
-    <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/instagram.png" alt="Instagram">
-    </a>
-    <a href="https://www.facebook.com/freelankarx" class="social-link" target="_blank">
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/facebook-icon-lg.png" alt="Facebook">
-    </a>
-  </div>
-</section>
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <h2>Contact Me</h2>
+      <p>Let's work together! Reach out via email or connect with me on social media.</p>
+      <a href="mailto:freelankarx@outlook.com" class="btn">Email Me</a>
+      <div class="social-icons">
+        <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/whatsapp%20icom.png" alt="WhatsApp">
+        </a>
+        <a href="https://www.tiktok.com/@freelankarx?_t=ZM-8tqrgG6YWPe&_r=1" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/tiktok.png" alt="TikTok">
+        </a>
+        <a href="https://kwork.com/user/freelankarx" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/kwork.png" alt="Kwork">
+        </a>
+        <a href="http://fiverr.com/lekieboyolamile/" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/Fiverr-Logo.png" alt="Fiverr">
+        </a>
+        <a href="https://www.upwork.com/freelancers/~019863175ee75bae5a" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/upwork.png" alt="Upwork">
+        </a>
+        <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/linkedin.png" alt="LinkedIn">
+        </a>
+        <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/freelankarx" class="social-link" target="_blank">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/facebook-icon-lg.png" alt="Facebook">
+        </a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 freelankarx. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
