--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
       </div>
     </section>
+    <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM'></script>
 
     <!-- Services Section -->
     <section id="services" class="section">
