--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM'></script>
 </head>
+  <!-- Klaviyo-Inspired Pop-Up Email Capture Form -->
+<div id="klaviyoPopup" class="klaviyo-popup">
+  <div class="popup-content">
+    <span class="popup-close">&times;</span>
+    <h2>Join Our Exclusive Community</h2>
+    <p>Subscribe now for premium tips, offers, and updates!</p>
+    <form id="klaviyoForm" action="YOUR_KLAVIYO_ENDPOINT" method="post">
+      <input type="email" name="email" placeholder="Enter your email" required>
+      <button type="submit" class="btn">Subscribe Now</button>
+    </form>
+  </div>
+</div>
 <body>
   <!-- Header Section with Video Banner -->
   <header>
