--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <span class="popup-close">&times;</span>
     <h2>Join Our Exclusive Community</h2>
     <p>Subscribe now for premium tips, offers, and updates!</p>
-    <form id="klaviyoForm" action="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM'></script>" method="post">
+    <form id="klaviyoForm" action="https://manage.kmail-lists.com/subscriptions/subscribe?a=WQBANM&g=TnaQgh'></script>" method="post">
       <input type="email" name="email" placeholder="Enter your email" required>
       <button type="submit" class="btn">Subscribe Now</button>
     </form>
