--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freelankarx - Olamilekan Muraina</title>
   <!-- Favicon using your About Me image -->
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for any extra icons (if needed) -->
+  <!-- Font Awesome for icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM'></script>
 </head>
@@ -20,7 +20,10 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#process">How I Work</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#faq">FAQ</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -80,18 +83,32 @@
       </div>
     </section>
 
-     <!-- Klaviyo-Inspired Pop-Up Email Capture Form -->
-<div id="klaviyoPopup" class="klaviyo-popup">
-  <div class="popup-content">
-    <span class="popup-close">&times;</span>
-    <h2>Join Our Exclusive Community</h2>
-    <p>Subscribe now for premium tips, offers, and updates!</p>
-    <form id="klaviyoForm" action="https://manage.kmail-lists.com/subscriptions/subscribe?a=WQBANM&g=TnaQgh'></script>" method="post">
-      <input type="email" name="email" placeholder="Enter your email" required>
-      <button type="submit" class="btn">Subscribe Now</button>
-    </form>
-  </div>
-</div>
+    <!-- Process Section (How I Work) -->
+    <section id="process" class="section">
+      <h2>How I Work</h2>
+      <div class="process-steps">
+        <div class="step">
+          <i class="fas fa-comments"></i>
+          <h3>Consultation</h3>
+          <p>We begin with an in-depth consultation to understand your goals.</p>
+        </div>
+        <div class="step">
+          <i class="fas fa-lightbulb"></i>
+          <h3>Strategy</h3>
+          <p>We craft a tailored strategy to boost your online growth.</p>
+        </div>
+        <div class="step">
+          <i class="fas fa-cogs"></i>
+          <h3>Execution</h3>
+          <p>We implement the plan with precision and creativity.</p>
+        </div>
+        <div class="step">
+          <i class="fas fa-chart-line"></i>
+          <h3>Results</h3>
+          <p>We analyze the outcomes and optimize for continuous growth.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="section">
@@ -106,6 +123,60 @@
         <div class="portfolio-item">
           <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%203%20image" alt="Project 3">
         </div>
+      </div>
+    </section>
+
+    <!-- Pricing Section -->
+    <section id="pricing" class="section">
+      <h2>Pricing Plans</h2>
+      <div class="pricing-grid">
+        <div class="pricing-plan">
+          <h3>Basic</h3>
+          <p>$499</p>
+          <ul>
+            <li>Basic Shopify Setup</li>
+            <li>Standard Design</li>
+            <li>Email Support</li>
+          </ul>
+          <a href="#contact" class="btn">Get Started</a>
+        </div>
+        <div class="pricing-plan">
+          <h3>Standard</h3>
+          <p>$999</p>
+          <ul>
+            <li>Advanced Shopify Setup</li>
+            <li>Custom Design</li>
+            <li>Marketing Integration</li>
+          </ul>
+          <a href="#contact" class="btn">Get Started</a>
+        </div>
+        <div class="pricing-plan">
+          <h3>Premium</h3>
+          <p>$1999</p>
+          <ul>
+            <li>Complete Shopify & eCommerce Solution</li>
+            <li>Fully Custom Design</li>
+            <li>24/7 Support</li>
+          </ul>
+          <a href="#contact" class="btn">Get Started</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq" class="section">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-item">
+        <h3>How long does it take to set up a Shopify store?</h3>
+        <p>Typically, it takes between 2-4 weeks depending on your requirements.</p>
+      </div>
+      <div class="faq-item">
+        <h3>What makes your service unique?</h3>
+        <p>With over 7 years of experience and proven results, I offer tailored strategies that drive real growth.</p>
+      </div>
+      <div class="faq-item">
+        <h3>How do you ensure a high conversion rate?</h3>
+        <p>I use data-driven strategies and continuous optimization to ensure your store is optimized for conversions.</p>
       </div>
     </section>
 
@@ -171,6 +242,7 @@
     <p>&copy; 2024 freelankarx. All rights reserved.</p>
   </footer>
 
+  <!-- Klaviyo Popup Form (if used) would go here -->
   <script src="script.js"></script>
 </body>
 </html>
