--- a/index.html
+++ b/index.html
@@ -109,7 +109,23 @@
         </div>
       </div>
     </section>
-
+    
+    <!-- What Sets Me Apart Section -->
+    <section id="what-sets-me-apart" class="section">
+      <h2>What Sets Me Apart</h2>
+      <div class="results-content">
+        <div class="results-text">
+          <h3>Explore Recent Results for Clients</h3>
+          <p>Increased average order value by 35%.</p>
+          <p>This is how I ensure amazing results for your business.</p>
+        </div>
+        <div class="results-image">
+          <!-- Replace YOUR_IMAGE_URL with your GitHub image link -->
+          <img src="YOUR_IMAGE_URL" alt="Recent Results">
+        </div>
+      </div>
+    </section>
+  
     <!-- Portfolio Section -->
     <section id="portfolio" class="section">
       <h2>My Work</h2>
