--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </section>
     
-    <!-- What Sets Me Apart Section -->
+        <!-- What Sets Me Apart Section -->
     <section id="what-sets-me-apart" class="section">
       <h2>What Sets Me Apart</h2>
       <div class="results-content">
@@ -120,12 +120,12 @@
           <p>This is how I ensure amazing results for your business.</p>
         </div>
         <div class="results-image">
-          <!-- https://github.com/Freelankarx/Freelankarx/blob/21ec2a2e35a87c1c3853a8d868f2c70c368cf850/result.png -->
+          <!-- Replace YOUR_IMAGE_URL with your GitHub image link -->
           <img src="YOUR_IMAGE_URL" alt="Recent Results">
         </div>
       </div>
     </section>
-  
+
     <!-- Portfolio Section -->
     <section id="portfolio" class="section">
       <h2>My Work</h2>
