--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freelankarx - Olamilekan Muraina</title>
   <!-- Favicon using your About Me image -->
-  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" type="image/png">
+  <link rel="icon" href="https://raw.githubusercontent.com//Freelankarx/Freelankarx/blob/366aeefb6ee4e125dc28b506220235ba321a1043/freelankarx%20logo.png">
   <link rel="stylesheet" href="styles.css">
   <!-- Font Awesome for icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
