--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="results-image">
           <!-- Replace YOUR_IMAGE_URL with your GitHub image link -->
-          <img src="YOUR_IMAGE_URL" alt="Recent Results">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/blob/99d8efd1aec5cee5b39516622615377ca0d53ced/result.png" alt="Recent Results">
         </div>
       </div>
     </section>
