--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freelankarx - Olamilekan Muraina</title>
-  <!-- Favicon using your About Me image -->
-  <link rel="icon" href="https://raw.githubusercontent.com//Freelankarx/Freelankarx/blob/366aeefb6ee4e125dc28b506220235ba321a1043/freelankarx%20logo.png">
+  <!-- Updated Favicon -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for icons -->
+  <!-- Font Awesome for Icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM'></script>
+  <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
 </head>
 <body>
   <!-- Header Section with Video Banner -->
@@ -20,6 +20,7 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
+        <li><a href="#what-sets-me-apart">What Sets Me Apart</a></li>
         <li><a href="#process">How I Work</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
@@ -83,6 +84,22 @@
       </div>
     </section>
 
+    <!-- What Sets Me Apart Section -->
+    <section id="what-sets-me-apart" class="section">
+      <h2>What Sets Me Apart</h2>
+      <div class="results-content">
+        <div class="results-text">
+          <h3>Explore Recent Results for Clients</h3>
+          <p>Increased average order value by 35%.</p>
+          <p>This is how I ensure amazing results for your business.</p>
+        </div>
+        <div class="results-image">
+          <!-- Updated image for the section -->
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/result.png" alt="Recent Results">
+        </div>
+      </div>
+    </section>
+
     <!-- Process Section (How I Work) -->
     <section id="process" class="section">
       <h2>How I Work</h2>
@@ -106,22 +123,6 @@
           <i class="fas fa-chart-line"></i>
           <h3>Results</h3>
           <p>We analyze the outcomes and optimize for continuous growth.</p>
-        </div>
-      </div>
-    </section>
-    
-        <!-- What Sets Me Apart Section -->
-    <section id="what-sets-me-apart" class="section">
-      <h2>What Sets Me Apart</h2>
-      <div class="results-content">
-        <div class="results-text">
-          <h3>Explore Recent Results for Clients</h3>
-          <p>Increased average order value by 35%.</p>
-          <p>This is how I ensure amazing results for your business.</p>
-        </div>
-        <div class="results-image">
-          <!-- Replace YOUR_IMAGE_URL with your GitHub image link -->
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/blob/99d8efd1aec5cee5b39516622615377ca0d53ced/result.png" alt="Recent Results">
         </div>
       </div>
     </section>
@@ -258,7 +259,6 @@
     <p>&copy; 2024 freelankarx. All rights reserved.</p>
   </footer>
 
-  <!-- Klaviyo Popup Form (if used) would go here -->
   <script src="script.js"></script>
 </body>
 </html>
