--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
+  <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freelankarx - Olamilekan Muraina</title>
   <!-- Updated Favicon -->
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <!-- Klaviyo (if needed) -->
   <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
-  <!-- Firebase and Cloudinary scripts (using Firebase v9 compat, loaded via CDN) -->
+  <!-- Firebase and Cloudinary scripts (using Firebase v9 compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
@@ -26,6 +26,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#what-sets-me-apart">What Sets Me Apart</a></li>
+        <li><a href="#recent-results">Recent Results</a></li>
         <li><a href="#process">How I Work</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
@@ -35,7 +36,7 @@
       </ul>
     </nav>
     <section class="hero">
-      <video autoplay loop muted playsinline class="hero-video">
+      <video autoplay loop muted playsinline preload="auto" class="hero-video">
         <source src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7b808773e9f3aad67c21e7bb5084ce8267d5a7d5/1000067383-vmake.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -89,14 +90,25 @@
     <!-- What Sets Me Apart Section -->
     <section id="what-sets-me-apart" class="section">
       <h2>What Sets Me Apart</h2>
+      <div class="was-content">
+        <p>
+          Choosing the right expert can be overwhelming, but I stand out with a unique, data-driven approach.
+          I deliver tailored strategies that yield measurable growth and lasting success.
+          My commitment to innovation and customer-centric solutions means your business will thrive.
+        </p>
+      </div>
+    </section>
+
+    <!-- Explore Recent Results for Clients Section -->
+    <section id="recent-results" class="section">
+      <h2>Explore Recent Results for Clients</h2>
       <div class="results-content">
         <div class="results-text">
-          <h3>Explore Recent Results for Clients</h3>
-          <p>Increased average order value by 35%.</p>
+          <p>Increased average order value by <strong>35%</strong>.</p>
           <p>This is how I ensure amazing results for your business.</p>
         </div>
         <div class="results-image">
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/result.png" alt="Recent Results">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/result.png" alt="Proof of Results">
         </div>
       </div>
     </section>
@@ -198,7 +210,7 @@
       </div>
     </section>
 
-    <!-- Testimonials Section (Reviews) -->
+    <!-- Testimonials & Reviews Section -->
     <section id="testimonials" class="section">
       <h2>Testimonials</h2>
       <div id="reviewsContainer"></div>
@@ -209,11 +221,16 @@
           <textarea name="review" placeholder="Your Review" required></textarea>
           <label for="rating">Your Rating:</label>
           <div class="rating">
-            <input type="radio" id="star5" name="rating" value="5" required><label for="star5">&#9733;</label>
-            <input type="radio" id="star4" name="rating" value="4"><label for="star4">&#9733;</label>
-            <input type="radio" id="star3" name="rating" value="3"><label for="star3">&#9733;</label>
-            <input type="radio" id="star2" name="rating" value="2"><label for="star2">&#9733;</label>
-            <input type="radio" id="star1" name="rating" value="1"><label for="star1">&#9733;</label>
+            <input type="radio" id="star5" name="rating" value="5" required>
+            <label for="star5">&#9733;</label>
+            <input type="radio" id="star4" name="rating" value="4">
+            <label for="star4">&#9733;</label>
+            <input type="radio" id="star3" name="rating" value="3">
+            <label for="star3">&#9733;</label>
+            <input type="radio" id="star2" name="rating" value="2">
+            <label for="star2">&#9733;</label>
+            <input type="radio" id="star1" name="rating" value="1">
+            <label for="star1">&#9733;</label>
           </div>
           <label for="video">Optional: Upload a Video Review</label>
           <input type="file" id="video" name="video" accept="video/*">
