--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
       <h2>What Sets Me Apart</h2>
       <div class="was-content">
         <p>
-          Choosing the right expert can be overwhelming, but I stand out with a unique, data-driven approach.
-          I deliver tailored strategies that yield measurable growth and lasting success.
-          My commitment to innovation and customer-centric solutions means your business will thrive.
+          Choosing the right expert can be overwhelming—but my unique, data-driven approach and commitment to innovation set me apart.
+          I deliver tailored strategies that yield measurable growth and ensure lasting success.
+          Trust in my expertise to transform your brand and drive remarkable results.
         </p>
       </div>
     </section>
