--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/about%20me%20image" alt="Olamilekan Muraina">
-        <div class="text">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/blob/7a8f5336e796c146ffa87394017af0177ad8dfa2/Olamilekan%20Muraina%20-%20freelankarx.png" alt="Olamilekan Muraina">
+        <div class="text">   
           <p>
             I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer.
             With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale
